static/psi4manual/1.1.0/_sources/api/psi4.core.Vector.rst.txt


psi4.core.Vector
================

.. currentmodule:: psi4.core

.. autoclass:: Vector
   :show-inheritance:

   
     
   

   
   

   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~Vector.name
      ~Vector.np
      ~Vector.nph
      ~Vector.shape

   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~Vector.array_interface
      ~Vector.dim
      ~Vector.from_array
      ~Vector.from_serial
      ~Vector.get
      ~Vector.nirrep
      ~Vector.np_read
      ~Vector.np_write
      ~Vector.print_out
      ~Vector.scale
      ~Vector.set
      ~Vector.to_array
      ~Vector.to_serial

   
   

   
   

   .. rubric:: Attributes Documentation

   
   .. autoattribute:: name
   .. autoattribute:: np
   .. autoattribute:: nph
   .. autoattribute:: shape

   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: array_interface
   .. automethod:: dim
   .. automethod:: from_array
   .. automethod:: from_serial
   .. automethod:: get
   .. automethod:: nirrep
   .. automethod:: np_read
   .. automethod:: np_write
   .. automethod:: print_out
   .. automethod:: scale
   .. automethod:: set
   .. automethod:: to_array
   .. automethod:: to_serial

   
   
